--- a/recipes/cheesepizza.html
+++ b/recipes/cheesepizza.html
@@ -10,5 +10,47 @@
     <h1>Cheese Pizza</h1>
     <img src="cheesepizza.jpg" alt="Cheese Pizza" width="500px" height="700">
 
+    <h3>Description</h3>
+
+
+    <p>There are days when I crave for cheese that I put cheese on everything! <br>
+        One time I made some egg sandwiches and I added grated cheese on it.<br> Remember the Tteokbokki recipe I made? The dish tasted so much better with melted cheese on top!
+        <br> Let’s satisfy our pizza and cheese cravings with this easy Four Cheese Pizza recipe!</p>
+    <p>Now that you know all about the different types of cheese, let’s get cooking!  </p>
+
+
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 cup warm water</li>
+        <li>2 tsp active dry yeast</li>
+        <li>1 tbsp honey</li>
+        <li>3 cups all-purpose flour</li>
+        <li>1/2 tsp salt</li>
+        <li>1 tbsp olive oil</li>
+        <li>1 tsp olive oil additional</li>
+        <li>3 tbsp softened unsalted butter</li>
+        <li>4 cloves medium garlic minced</li>
+        <li>1 cup mozzarella cheese shredded</li>
+        <li>1 cup white cheddar cheese shredded</li>
+        <li>1 cup Monterey Jack cheese shredded</li>
+        <li>1/4 cup Parmesan cheese freshly grated</li>
+        <li>1/4 cup chopped fresh parsley optional</li>
+       
+    </ul>
+
+    <h3>Instructions</h3>
+    <ol>
+     <li>In a large bowl or mixer, combine the water, honey , and yeast. Let the dough rest for 10 minutes until yeast starts to form.</li>
+     <br><li>Add salt, flour, and 1 tbsp olive oil. Mix well until the dough pulls away from the bowl. </li>
+     <br><li>Knead the dough for 10 minutes, manually. </li>
+     <br><li>Form the dough into a bowl. Cover the dough with the remaining olive oil, place back into the bowl, and cover with a damp towel. Place in a warm area and let the dough rise for about 45 minutes. </li>
+     <br><li>Preheat oven to 450°F. If you have a pizza pan, lightly oil it with olive oil. Otherwise, you can use a sheet of parchment paper placed on top of the baking pan or cooling rack. </li>
+     <br><li>Flatten the dough and lay it on top of the pizza pan or baking rack with parchment paper.</li>
+     <br><li>In a mixing bowl, combine the softened butter and garlic. Spread it evenly on the pizza dough.</li>
+     <br><li>Sprinkle all the cheeses, evenly, except the parmesan. </li>
+     <br><li>Bake for 13 to 15 minutes until the crust is golden brown. Sprinkle with fresh parmesan and parsley. </li>
+
+    </ol>
 </body>
 </html>
