--- a/recipes/saladrecipe.html
+++ b/recipes/saladrecipe.html
@@ -12,11 +12,41 @@
 
     <h3>Description</h3>
 
-    <p>Easy Chicken Cobb Salad with the best homemade Cobb Salad Dressing! This protein-packed salad is a meal in itself loaded with crisp lettuce, juicy tomatoes, chicken, bacon, boiled eggs, creamy avocado and crumbled blue cheese.</p>
-    <p>The original Cobb Salad was developed by Bob Cobb in 1937 for his Brown Derby Restaurant in Los Angeles. It has become a famous American dish and is similar to a Chef’s Salad. </p>
+    <p>Easy Chicken Cobb Salad with the best homemade Cobb Salad Dressing! <br>
+        This protein-packed salad is a meal in itself loaded with crisp lettuce, juicy tomatoes, <br>chicken, bacon, boiled eggs, creamy avocado and crumbled blue cheese.</p>
+    <p>The original Cobb Salad was developed by Bob Cobb in 1937 for his Brown Derby Restaurant <br>in Los Angeles. It has become a famous American dish and is similar to a Chef’s Salad. </p>
 
 
     <h3>Ingredients</h3>
+    <ul>
+        <li> 6 oz bacon, (6 slices) chopped and browned </li>
+        <li> 1 medium head romaine lettuce, 5 cups chopped, rinsed and dried </li>
+        <li> 2 cooked chicken breasts, from a cooked chicken </li>
+        <li> 2 hard-boiled eggs </li>
+        <li> 1 large avocado, sliced </li>
+        <li> 1 cup cherry tomatoes, halved </li>
+        <li> 1/2 cup red onion, thinly sliced </li>
+        <li> 1/2 cup blue cheese, crumbled (or feta cheese) </li>
+        <li> 2 Tbsp parsley, finely chopped </li>
+        <li> 3 Tbsp balsamic vinegar </li>
+        <li> 1 Tbsp dijon mustard </li>
+        <li> 1 garlic clove, pressed or finely minced </li>
+        <li> 1/3 cup extra virgin olive oil </li>
+        <li> 1/4 tsp salt </li>
+        <li> 1/8 tsp black pepper </li>
+    </ul>
+
+    <h3>Instructions</h3>
+    <ol>
+     <li>Sautee chopped bacon on a skillet until browned and crisp (5 min), <br>then transfer to a paper-towel-lined plate to cool. Cook 2 hard-boiled eggs then peel and quarter.
+    </li><br>
+
+     <li>Chop, rinse and spin dry romaine lettuce and arrange on a platter. <br>Arrange remaining salad ingredients (chicken, eggs, avocado, tomatoes, onion, blue cheese, and bacon) <br> in rows over salad then sprinkle the finely chopped parsley over the salad.</li>
+     <br>
+     <li>Transfer dressing ingredients to a mason jar and shake like crazy. <br>Drizzle over salad just before serving or let guests add their own dressing to taste.</li>
+   
+
+    </ol>
 
 
 </body>
