--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -7,7 +7,36 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Grilled Chicken recipe</h1>
+    <h1>Grilled Chicken Recipe</h1>
     <img src="chicken.jpg" alt="Grilled Chicken" width="500px" height="700">
+
+    <h3>Description</h3>
+
+
+    <p>Whether you keep them on hand for quick lunches or serve them for dinner tonight,<br> a juicy Grilled Chicken Breast is the perfect way to upgrade any meal.</p>
+    <p>Mastering the art of preparing a perfectly grilled chicken breast will make you feel like <br>a has-her-life-together grown-up. </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 3/4 pounds boneless, skinless chicken breasts about 3 medium breasts</li>
+        <li>1 batch best Chicken Marinade*</li>
+        <li>Chopped fresh herbs crumbled feta cheese, a squeeze of lemon juice, optional for serving</li>
+        <li>Oil for grilling</li>
+    </ul>
+
+    <h3>Instructions</h3>
+    <ol>
+     <li>Place the chicken breasts on a cutting board (leave several inches between them and work in batches as needed).<br> Cover with plastic wrap to keep things tidy, and with a meat mallet, rolling pin, or your fist, pound the chicken to an even thickness. <br> It doesn't need to be ultra thin—just make sure the middle is fairly even with the ends (the chicken should be about 1/2-inch thick).</li>
+    <br> <li>With a fork, poke holes all over the chicken (this will allow the marinade to absorb).</li>
+    <br> <li>In a large ziptop bag, combine the marinade ingredients, then add the chicken.</li>
+    <br><li>Meat and marinade in a plastic bag
+        Seal the bag to evenly coat the chicken with the marinade.<br> Place in a pan or bowl to catch any drips. Let the chicken marinate at room temperature for at least 30 minutes, <br>or refrigerate it to marinate for up to 12 hours (5 to 6 hours is ideal). Even 15 minutes is better than nothing!</li>
+        <br><li>When ready to grill, preheat the grill to high (475 degrees F). If your chicken has been in the refrigerator, <br>remove it and allow it to come to room temperature for at least 10 minutes. Clean and oil the grates.</li>
+        <br><li>Place the chicken on the grill presentation (smooth) side down, shaking off any excess marinade. <br>Cover the grill and let cook for 4 to 5 minutes on the first side, then flip. The chicken should lift easily off the grill; <br> if it sticks, allow it to cook another minute or two.
+        Three chicken breasts on the grill</li>
+        <br><li>Recover the grill and cook for an additional 4 to 8 minutes. Chicken is considered done at 165 degrees F. <br>I like to remove chicken from the grill around the 155-160 degree F mark and allow it to finish cooking while resting.<br> DO NOT OVERCOOK, or your chicken will be dry.</li>
+        <br><li>Place the chicken on a plate and let rest for at least 5 minutes (resting is mandatory!). <br>Add any desired toppings or sauces. Enjoy!</li>
+    </ol>
+    <br>
 </body>
 </html>
